// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with missing params 1`] = `
Array [
  Object {
    "CONTEXT": Object {
      "MOBMAIL": Object {
        "flags": Object {
          "story.story.en": Object {
            "excludedAccounts": Array [],
            "id": "story",
            "markImage": "https://mobmail.s3.yandex.net/global/stories/story/mark.png",
            "slides": Array [
              Object {
                "background": "https://mobmail.s3.yandex.net/global/stories/story/bg.jpg",
                "backgroundColor": "#5377F4",
                "description": "Mail boxes",
                "duration": 6000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/story/slide_1.png",
                "title": "Mail boxes",
              },
              Object {
                "background": "https://mobmail.s3.yandex.net/global/stories/story/bg.jpg",
                "backgroundColor": "#5377F4",
                "description": "Mail boxes",
                "duration": 6000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/story/slide_2.png",
              },
              Object {
                "background": "https://mobmail.s3.yandex.net/global/stories/story/bg.jpg",
                "backgroundColor": "#5377F4",
                "description": "Mail boxes",
                "duration": 6000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/story/slide_3.png",
              },
            ],
            "title": "Stories",
          },
        },
        "logs": Object {},
        "source": "global",
      },
    },
    "HANDLER": "MOBMAIL",
  },
  Object {
    "CONTEXT": Object {
      "MOBMAIL": Object {
        "flags": Object {
          "story.dark.en": Object {
            "excludedAccounts": Array [],
            "id": "dark",
            "markImage": "https://mobmail.s3.yandex.net/global/stories/dark/mark.png",
            "slides": Array [
              Object {
                "background": "https://mobmail.s3.yandex.net/global/stories/dark/bg.jpg",
                "backgroundColor": "#292B37",
                "description": "Mail boxes",
                "duration": 6000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/dark/slide_1.png",
                "title": "Dark Theme",
              },
              Object {
                "background": "https://mobmail.s3.yandex.net/global/stories/dark/bg.jpg",
                "backgroundColor": "#292B37",
                "description": "Mail boxes",
                "duration": 6000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/dark/slide_2.png",
              },
              Object {
                "actionLink": "settings",
                "actionText": "Turn on",
                "background": "https://mobmail.s3.yandex.net/global/stories/dark/bg.jpg",
                "backgroundColor": "#292B37",
                "description": "Mail boxes",
                "duration": 6000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/dark/slide_3.png",
              },
            ],
            "title": "Dark Theme",
          },
        },
        "logs": Object {},
        "source": "global",
      },
    },
    "HANDLER": "MOBMAIL",
  },
  Object {
    "CONTEXT": Object {
      "MOBMAIL": Object {
        "flags": Object {
          "story.abook.en": Object {
            "excludedAccounts": Array [
              "external_mail",
            ],
            "id": "abook",
            "markImage": "https://mobmail.s3.yandex.net/global/stories/abook/mark.png",
            "slides": Array [
              Object {
                "background": "https://mobmail.s3.yandex.net/global/stories/abook/bg.jpg",
                "backgroundColor": "#2A3364",
                "description": "Mail boxes",
                "duration": 10000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/abook/slide_1.png",
                "title": "Mail boxes",
              },
              Object {
                "actionLink": "search/address-book",
                "actionText": "Посмотреть",
                "background": "https://mobmail.s3.yandex.net/global/stories/abook/bg.jpg",
                "backgroundColor": "#2A3364",
                "description": "Mail boxes",
                "duration": 10000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/abook/slide_2.png",
              },
            ],
            "title": "Address Book",
          },
        },
        "logs": Object {},
        "source": "global",
      },
    },
    "HANDLER": "MOBMAIL",
  },
  Object {
    "CONTEXT": Object {
      "MOBMAIL": Object {
        "flags": Object {
          "story.mailish.en": Object {
            "excludedAccounts": Array [],
            "id": "mailish",
            "markImage": "https://mobmail.s3.yandex.net/global/stories/mailish/mark.jpg",
            "slides": Array [
              Object {
                "actionLink": "external",
                "actionText": "Добавить аккаунт",
                "background": "https://mobmail.s3.yandex.net/global/stories/mailish/bg.jpg",
                "backgroundColor": "#44598B",
                "description": "Mail boxes",
                "duration": 10000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/mailish/slide_1.png",
                "title": "Mail boxes",
              },
            ],
            "title": "Mail boxes",
          },
        },
        "logs": Object {},
        "source": "global",
      },
    },
    "HANDLER": "MOBMAIL",
  },
  Object {
    "CONTEXT": Object {
      "MOBMAIL": Object {
        "flags": Object {
          "stories_list": Array [
            "story.story.ru",
            "story.story.en",
            "story.dark.ru",
            "story.dark.en",
            "story.abook.ru",
            "story.abook.en",
            "story.mailish.ru",
            "story.mailish.en",
          ],
        },
        "logs": Object {},
        "source": "global",
      },
    },
    "HANDLER": "MOBMAIL",
  },
  Object {
    "CONTEXT": Object {
      "MOBMAIL": Object {
        "flags": Object {
          "stories_iteration": 1,
        },
        "logs": Object {},
        "source": "global",
      },
    },
    "HANDLER": "MOBMAIL",
  },
  Object {
    "CONTEXT": Object {
      "MOBMAIL": Object {
        "flags": Object {
          "push.smart_reply.enabled": true,
          "xflags.flush.enabled": true,
        },
        "logs": Object {
          "test_ids": "0",
        },
        "source": "global",
      },
    },
    "HANDLER": "MOBMAIL",
  },
  Object {
    "CONTEXT": Object {
      "MOBMAIL": Object {
        "flags": Object {
          "search.top_contact_suggest.enabled": false,
        },
        "logs": Object {
          "test_ids": "262151",
        },
        "source": "experiment",
      },
    },
    "HANDLER": "MOBMAIL",
  },
]
`;

exports[`with missing params 2`] = `
Array [
  Array [
    "EXPERIMENTS_CHECK_ERROR",
    Object {
      "message": "applicationId == \\"ru.yandex.mail.beta\\" There is no variable applicationId
",
    },
  ],
  Array [
    "EXPERIMENTS_CHECK_ERROR",
    Object {
      "message": "applicationId == \\"ru.yandex.mail.beta\\" There is no variable applicationId
",
    },
  ],
]
`;

exports[`with missing params 3`] = `
Array [
  Array [
    "experiments_check_error",
  ],
  Array [
    "experiments_check_error",
  ],
]
`;

exports[`with params 1`] = `
Array [
  Object {
    "CONTEXT": Object {
      "MOBMAIL": Object {
        "flags": Object {
          "story.story.en": Object {
            "excludedAccounts": Array [],
            "id": "story",
            "markImage": "https://mobmail.s3.yandex.net/global/stories/story/mark.png",
            "slides": Array [
              Object {
                "background": "https://mobmail.s3.yandex.net/global/stories/story/bg.jpg",
                "backgroundColor": "#5377F4",
                "description": "Mail boxes",
                "duration": 6000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/story/slide_1.png",
                "title": "Mail boxes",
              },
              Object {
                "background": "https://mobmail.s3.yandex.net/global/stories/story/bg.jpg",
                "backgroundColor": "#5377F4",
                "description": "Mail boxes",
                "duration": 6000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/story/slide_2.png",
              },
              Object {
                "background": "https://mobmail.s3.yandex.net/global/stories/story/bg.jpg",
                "backgroundColor": "#5377F4",
                "description": "Mail boxes",
                "duration": 6000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/story/slide_3.png",
              },
            ],
            "title": "Stories",
          },
        },
        "logs": Object {},
        "source": "global",
      },
    },
    "HANDLER": "MOBMAIL",
  },
  Object {
    "CONTEXT": Object {
      "MOBMAIL": Object {
        "flags": Object {
          "story.dark.en": Object {
            "excludedAccounts": Array [],
            "id": "dark",
            "markImage": "https://mobmail.s3.yandex.net/global/stories/dark/mark.png",
            "slides": Array [
              Object {
                "background": "https://mobmail.s3.yandex.net/global/stories/dark/bg.jpg",
                "backgroundColor": "#292B37",
                "description": "Mail boxes",
                "duration": 6000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/dark/slide_1.png",
                "title": "Dark Theme",
              },
              Object {
                "background": "https://mobmail.s3.yandex.net/global/stories/dark/bg.jpg",
                "backgroundColor": "#292B37",
                "description": "Mail boxes",
                "duration": 6000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/dark/slide_2.png",
              },
              Object {
                "actionLink": "settings",
                "actionText": "Turn on",
                "background": "https://mobmail.s3.yandex.net/global/stories/dark/bg.jpg",
                "backgroundColor": "#292B37",
                "description": "Mail boxes",
                "duration": 6000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/dark/slide_3.png",
              },
            ],
            "title": "Dark Theme",
          },
        },
        "logs": Object {},
        "source": "global",
      },
    },
    "HANDLER": "MOBMAIL",
  },
  Object {
    "CONTEXT": Object {
      "MOBMAIL": Object {
        "flags": Object {
          "story.abook.en": Object {
            "excludedAccounts": Array [
              "external_mail",
            ],
            "id": "abook",
            "markImage": "https://mobmail.s3.yandex.net/global/stories/abook/mark.png",
            "slides": Array [
              Object {
                "background": "https://mobmail.s3.yandex.net/global/stories/abook/bg.jpg",
                "backgroundColor": "#2A3364",
                "description": "Mail boxes",
                "duration": 10000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/abook/slide_1.png",
                "title": "Mail boxes",
              },
              Object {
                "actionLink": "search/address-book",
                "actionText": "Посмотреть",
                "background": "https://mobmail.s3.yandex.net/global/stories/abook/bg.jpg",
                "backgroundColor": "#2A3364",
                "description": "Mail boxes",
                "duration": 10000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/abook/slide_2.png",
              },
            ],
            "title": "Address Book",
          },
        },
        "logs": Object {},
        "source": "global",
      },
    },
    "HANDLER": "MOBMAIL",
  },
  Object {
    "CONTEXT": Object {
      "MOBMAIL": Object {
        "flags": Object {
          "story.mailish.en": Object {
            "excludedAccounts": Array [],
            "id": "mailish",
            "markImage": "https://mobmail.s3.yandex.net/global/stories/mailish/mark.jpg",
            "slides": Array [
              Object {
                "actionLink": "external",
                "actionText": "Добавить аккаунт",
                "background": "https://mobmail.s3.yandex.net/global/stories/mailish/bg.jpg",
                "backgroundColor": "#44598B",
                "description": "Mail boxes",
                "duration": 10000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/mailish/slide_1.png",
                "title": "Mail boxes",
              },
            ],
            "title": "Mail boxes",
          },
        },
        "logs": Object {},
        "source": "global",
      },
    },
    "HANDLER": "MOBMAIL",
  },
  Object {
    "CONTEXT": Object {
      "MOBMAIL": Object {
        "flags": Object {
          "stories_list": Array [
            "story.story.ru",
            "story.story.en",
            "story.dark.ru",
            "story.dark.en",
            "story.abook.ru",
            "story.abook.en",
            "story.mailish.ru",
            "story.mailish.en",
          ],
        },
        "logs": Object {},
        "source": "global",
      },
    },
    "HANDLER": "MOBMAIL",
  },
  Object {
    "CONTEXT": Object {
      "MOBMAIL": Object {
        "flags": Object {
          "stories_iteration": 1,
        },
        "logs": Object {},
        "source": "global",
      },
    },
    "HANDLER": "MOBMAIL",
  },
  Object {
    "CONTEXT": Object {
      "MOBMAIL": Object {
        "flags": Object {
          "push.smart_reply.enabled": true,
          "xflags.flush.enabled": true,
        },
        "logs": Object {
          "test_ids": "0",
        },
        "source": "global",
      },
    },
    "HANDLER": "MOBMAIL",
  },
  Object {
    "CONTEXT": Object {
      "MOBMAIL": Object {
        "flags": Object {
          "mail_view.quick_reply.enabled": true,
        },
        "logs": Object {},
        "source": "global",
      },
    },
    "HANDLER": "MOBMAIL",
  },
  Object {
    "CONTEXT": Object {
      "MOBMAIL": Object {
        "flags": Object {
          "mail_view.smart_reply.enabled": true,
        },
        "logs": Object {},
        "source": "global",
      },
    },
    "HANDLER": "MOBMAIL",
  },
  Object {
    "CONTEXT": Object {
      "MOBMAIL": Object {
        "flags": Object {
          "search.top_contact_suggest.enabled": false,
        },
        "logs": Object {
          "test_ids": "262151",
        },
        "source": "experiment",
      },
    },
    "HANDLER": "MOBMAIL",
  },
]
`;

exports[`without params 1`] = `
Array [
  Object {
    "CONDITION": "lang == \\"ru\\"",
    "CONTEXT": Object {
      "MOBMAIL": Object {
        "flags": Object {
          "story.story.ru": Object {
            "excludedAccounts": Array [],
            "id": "story",
            "markImage": "https://mobmail.s3.yandex.net/global/stories/story/mark.png",
            "slides": Array [
              Object {
                "background": "https://mobmail.s3.yandex.net/global/stories/story/bg.jpg",
                "backgroundColor": "#5377F4",
                "description": "Когда-то марки были только на конвертах, а теперь они есть и в приложении Почты",
                "duration": 6000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/story/slide_1.png",
                "title": "Почтовые марки",
              },
              Object {
                "background": "https://mobmail.s3.yandex.net/global/stories/story/bg.jpg",
                "backgroundColor": "#5377F4",
                "description": "Марки будут появляться над списком писем. Каждая из них расскажет о том, что умеет Почта",
                "duration": 6000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/story/slide_2.png",
              },
              Object {
                "background": "https://mobmail.s3.yandex.net/global/stories/story/bg.jpg",
                "backgroundColor": "#5377F4",
                "description": "Если вам надоест смотреть на марки, скройте их — нажмите на последнюю марку в списке",
                "duration": 6000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/story/slide_3.png",
              },
            ],
            "title": "Марки в почте",
          },
        },
        "logs": Object {},
        "source": "global",
      },
    },
    "HANDLER": "MOBMAIL",
  },
  Object {
    "CONDITION": "lang == \\"en\\"",
    "CONTEXT": Object {
      "MOBMAIL": Object {
        "flags": Object {
          "story.story.en": Object {
            "excludedAccounts": Array [],
            "id": "story",
            "markImage": "https://mobmail.s3.yandex.net/global/stories/story/mark.png",
            "slides": Array [
              Object {
                "background": "https://mobmail.s3.yandex.net/global/stories/story/bg.jpg",
                "backgroundColor": "#5377F4",
                "description": "Mail boxes",
                "duration": 6000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/story/slide_1.png",
                "title": "Mail boxes",
              },
              Object {
                "background": "https://mobmail.s3.yandex.net/global/stories/story/bg.jpg",
                "backgroundColor": "#5377F4",
                "description": "Mail boxes",
                "duration": 6000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/story/slide_2.png",
              },
              Object {
                "background": "https://mobmail.s3.yandex.net/global/stories/story/bg.jpg",
                "backgroundColor": "#5377F4",
                "description": "Mail boxes",
                "duration": 6000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/story/slide_3.png",
              },
            ],
            "title": "Stories",
          },
        },
        "logs": Object {},
        "source": "global",
      },
    },
    "HANDLER": "MOBMAIL",
  },
  Object {
    "CONDITION": "lang == \\"ru\\"",
    "CONTEXT": Object {
      "MOBMAIL": Object {
        "flags": Object {
          "story.dark.ru": Object {
            "excludedAccounts": Array [],
            "id": "dark",
            "markImage": "https://mobmail.s3.yandex.net/global/stories/dark/mark.png",
            "slides": Array [
              Object {
                "background": "https://mobmail.s3.yandex.net/global/stories/dark/bg.jpg",
                "backgroundColor": "#292B37",
                "description": "Если сделать тёмным интерфейс Почты, можно сэкономить заряд на телефоне",
                "duration": 6000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/dark/slide_1.png",
                "title": "Тёмная тема",
              },
              Object {
                "background": "https://mobmail.s3.yandex.net/global/stories/dark/bg.jpg",
                "backgroundColor": "#292B37",
                "description": "Включите тёмную тему, если любите читать письма по вечерам — с ней будут меньше уставать глаза при слабом или выключенном свете",
                "duration": 6000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/dark/slide_2.png",
              },
              Object {
                "actionLink": "settings",
                "actionText": "Включить",
                "background": "https://mobmail.s3.yandex.net/global/stories/dark/bg.jpg",
                "backgroundColor": "#292B37",
                "description": "Включить тёмную тему можно в настройках или прямо здесь",
                "duration": 6000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/dark/slide_3.png",
              },
            ],
            "title": "Тёмная тема",
          },
        },
        "logs": Object {},
        "source": "global",
      },
    },
    "HANDLER": "MOBMAIL",
  },
  Object {
    "CONDITION": "lang == \\"en\\"",
    "CONTEXT": Object {
      "MOBMAIL": Object {
        "flags": Object {
          "story.dark.en": Object {
            "excludedAccounts": Array [],
            "id": "dark",
            "markImage": "https://mobmail.s3.yandex.net/global/stories/dark/mark.png",
            "slides": Array [
              Object {
                "background": "https://mobmail.s3.yandex.net/global/stories/dark/bg.jpg",
                "backgroundColor": "#292B37",
                "description": "Mail boxes",
                "duration": 6000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/dark/slide_1.png",
                "title": "Dark Theme",
              },
              Object {
                "background": "https://mobmail.s3.yandex.net/global/stories/dark/bg.jpg",
                "backgroundColor": "#292B37",
                "description": "Mail boxes",
                "duration": 6000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/dark/slide_2.png",
              },
              Object {
                "actionLink": "settings",
                "actionText": "Turn on",
                "background": "https://mobmail.s3.yandex.net/global/stories/dark/bg.jpg",
                "backgroundColor": "#292B37",
                "description": "Mail boxes",
                "duration": 6000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/dark/slide_3.png",
              },
            ],
            "title": "Dark Theme",
          },
        },
        "logs": Object {},
        "source": "global",
      },
    },
    "HANDLER": "MOBMAIL",
  },
  Object {
    "CONDITION": "lang == \\"ru\\"",
    "CONTEXT": Object {
      "MOBMAIL": Object {
        "flags": Object {
          "story.abook.ru": Object {
            "excludedAccounts": Array [
              "external_mail",
            ],
            "id": "abook",
            "markImage": "https://mobmail.s3.yandex.net/global/stories/abook/mark.png",
            "slides": Array [
              Object {
                "background": "https://mobmail.s3.yandex.net/global/stories/abook/bg.jpg",
                "backgroundColor": "#2A3364",
                "description": "Загляните под аватарку собеседника, чтобы связаться с ним быстрее",
                "duration": 10000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/abook/slide_1.png",
                "title": "Давай лучше голосом или в чате!",
              },
              Object {
                "actionLink": "search/address-book",
                "actionText": "Посмотреть",
                "background": "https://mobmail.s3.yandex.net/global/stories/abook/bg.jpg",
                "backgroundColor": "#2A3364",
                "description": "Там же вы найдете все письма от него, вашу следующую общую встречу и последнее сообщение из чата",
                "duration": 10000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/abook/slide_2.png",
              },
            ],
            "title": "Карточка контакта",
          },
        },
        "logs": Object {},
        "source": "global",
      },
    },
    "HANDLER": "MOBMAIL",
  },
  Object {
    "CONDITION": "lang == \\"en\\"",
    "CONTEXT": Object {
      "MOBMAIL": Object {
        "flags": Object {
          "story.abook.en": Object {
            "excludedAccounts": Array [
              "external_mail",
            ],
            "id": "abook",
            "markImage": "https://mobmail.s3.yandex.net/global/stories/abook/mark.png",
            "slides": Array [
              Object {
                "background": "https://mobmail.s3.yandex.net/global/stories/abook/bg.jpg",
                "backgroundColor": "#2A3364",
                "description": "Mail boxes",
                "duration": 10000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/abook/slide_1.png",
                "title": "Mail boxes",
              },
              Object {
                "actionLink": "search/address-book",
                "actionText": "Посмотреть",
                "background": "https://mobmail.s3.yandex.net/global/stories/abook/bg.jpg",
                "backgroundColor": "#2A3364",
                "description": "Mail boxes",
                "duration": 10000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/abook/slide_2.png",
              },
            ],
            "title": "Address Book",
          },
        },
        "logs": Object {},
        "source": "global",
      },
    },
    "HANDLER": "MOBMAIL",
  },
  Object {
    "CONDITION": "lang == \\"ru\\"",
    "CONTEXT": Object {
      "MOBMAIL": Object {
        "flags": Object {
          "story.mailish.ru": Object {
            "excludedAccounts": Array [],
            "id": "mailish",
            "markImage": "https://mobmail.s3.yandex.net/global/stories/mailish/mark.jpg",
            "slides": Array [
              Object {
                "actionLink": "external",
                "actionText": "Добавить аккаунт",
                "background": "https://mobmail.s3.yandex.net/global/stories/mailish/bg.jpg",
                "backgroundColor": "#44598B",
                "description": "Подключай аккаунты Mail.ru, Gmail, Outlook. Работай и получай уведомления для каждого",
                "duration": 10000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/mailish/slide_1.png",
                "title": "Почта для всех ящиков",
              },
            ],
            "title": "Почтовые ящики",
          },
        },
        "logs": Object {},
        "source": "global",
      },
    },
    "HANDLER": "MOBMAIL",
  },
  Object {
    "CONDITION": "lang == \\"en\\"",
    "CONTEXT": Object {
      "MOBMAIL": Object {
        "flags": Object {
          "story.mailish.en": Object {
            "excludedAccounts": Array [],
            "id": "mailish",
            "markImage": "https://mobmail.s3.yandex.net/global/stories/mailish/mark.jpg",
            "slides": Array [
              Object {
                "actionLink": "external",
                "actionText": "Добавить аккаунт",
                "background": "https://mobmail.s3.yandex.net/global/stories/mailish/bg.jpg",
                "backgroundColor": "#44598B",
                "description": "Mail boxes",
                "duration": 10000,
                "foreground": "https://mobmail.s3.yandex.net/global/stories/mailish/slide_1.png",
                "title": "Mail boxes",
              },
            ],
            "title": "Mail boxes",
          },
        },
        "logs": Object {},
        "source": "global",
      },
    },
    "HANDLER": "MOBMAIL",
  },
  Object {
    "CONTEXT": Object {
      "MOBMAIL": Object {
        "flags": Object {
          "stories_list": Array [
            "story.story.ru",
            "story.story.en",
            "story.dark.ru",
            "story.dark.en",
            "story.abook.ru",
            "story.abook.en",
            "story.mailish.ru",
            "story.mailish.en",
          ],
        },
        "logs": Object {},
        "source": "global",
      },
    },
    "HANDLER": "MOBMAIL",
  },
  Object {
    "CONTEXT": Object {
      "MOBMAIL": Object {
        "flags": Object {
          "stories_iteration": 1,
        },
        "logs": Object {},
        "source": "global",
      },
    },
    "HANDLER": "MOBMAIL",
  },
  Object {
    "CONTEXT": Object {
      "MOBMAIL": Object {
        "flags": Object {
          "push.smart_reply.enabled": true,
          "xflags.flush.enabled": true,
        },
        "logs": Object {
          "test_ids": "0",
        },
        "source": "global",
      },
    },
    "HANDLER": "MOBMAIL",
  },
  Object {
    "CONDITION": "applicationId == \\"ru.yandex.mail.beta\\"",
    "CONTEXT": Object {
      "MOBMAIL": Object {
        "flags": Object {
          "mail_view.quick_reply.enabled": true,
        },
        "logs": Object {},
        "source": "global",
      },
    },
    "HANDLER": "MOBMAIL",
  },
  Object {
    "CONDITION": "applicationId == \\"ru.yandex.mail.beta\\"",
    "CONTEXT": Object {
      "MOBMAIL": Object {
        "flags": Object {
          "mail_view.smart_reply.enabled": true,
        },
        "logs": Object {},
        "source": "global",
      },
    },
    "HANDLER": "MOBMAIL",
  },
  Object {
    "CONTEXT": Object {
      "MOBMAIL": Object {
        "flags": Object {
          "search.top_contact_suggest.enabled": false,
        },
        "logs": Object {
          "test_ids": "262151",
        },
        "source": "experiment",
      },
    },
    "HANDLER": "MOBMAIL",
  },
]
`;
